--- a/Navbar/style.css
+++ b/Navbar/style.css
@@ -1,16 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
 
-*
-{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: "Open Sans", sans-serif;
-    background: hsl(209, 61%, 16%);
-    color: hsl(209, 61%, 16%);
+    background: #ffffff;
+    color: #102a42;
     line-height: 1.5;
     font-size: 0.875rem;
 }
@@ -21,30 +20,6 @@ ul {
 
 a {
     text-decoration: none;
-}
-
-
-@media screen and (min-width: 800px) {
-
-    body {
-        font-size: 1rem;
-    }
-}
-
-.section {
-    padding: 5rem 0;
-}
-
-.section-center {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 1170px;
-}
-
-@media screen and (min-width: 992px) {
-    .section-center {
-        width: 95vw;
-    }
 }
 
 nav {
@@ -61,7 +36,7 @@ nav {
 
 .nav-toggle {
     font-size: 1.5rem;
-    color: hsl(205, 78%, 60%);
+    color: #49a6e9;
     background: transparent;
     border-color: transparent;
     transition: all 0.3s linear;
@@ -69,7 +44,7 @@ nav {
 }
 
 .nav-toggle:hover {
-    color: hsl(205, 86%, 17%);
+    color: #063251;
     transform: rotate(90deg);
 }
 
@@ -78,7 +53,7 @@ nav {
 }
 
 .links a {
-    color: hsl(209, 34%, 30%);
+    color: #324d67;
     font-size: 1rem;
     text-transform: capitalize;
     letter-spacing: 0.1rem;
@@ -88,8 +63,8 @@ nav {
 }
 
 .links a:hover {
-    background: hsl(210, 31%, 80%);
-    color: hsl(210, 22%, 49%);
+    background: #bcccdc;
+    color: #617d98;
     padding-left: 1.5rem;
 }
 
@@ -146,11 +121,11 @@ nav {
 
     .social-icons a {
         margin: 0 0.5rem;
-        color: hsl(210, 22%, 49%);
+        color: #617d98;
         transition: all 0.3s linear;
     }
 
     .social-icons a:hover {
-        color: hsl(205, 90%, 76%);
+        color: #8bcbf9;
     }
 }
